<resources>
    <string name="app_name">CAT - Crypto</string>
    <string name="coin_name">Nama Koin</string>
    <string name="detail">Detail</string>
    <string name="favorite">Fav</string>
    <string name="share">Share</string>
    <string name="search_coin">Search Coin</string>
    <string name="favorite_coin">Favorite Coin</string>
    <string name="about">About</string>
    <string name="profile_name">Muhamad Mustain</string>
    <string name="profile_email">muhmd.mustain@gmail.com</string>
    <string name="send_email">SEND EMAIL</string>
    <string name="add_to_favorite">FAVORITE</string>
    <string name="share_text">SHARE</string>
    <string name="more_information">MORE INFORMATION</string>
</resources>