<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:id="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/fotodiri"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_name"
        android:layout_below="@+id/profile_image"
        android:layout_centerHorizontal="true"
        android:text="@string/profile_name"
        android:textStyle="bold"
        android:textSize="32sp"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profile_email"
        android:layout_below="@+id/profile_name"
        android:layout_centerHorizontal="true"
        android:text="@string/profile_email"
        android:textSize="18sp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendEmailBtn"
        android:layout_below="@+id/profile_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/send_email"
        android:textColor="@color/white"
        />

</RelativeLayout>