<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".DetailActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/imageLogo"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/eth"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/a_title"
            android:text="placeholder_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="6dp"
            android:layout_below="@id/imageLogo"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/a_desc"
            android:layout_below="@id/a_title"
            android:text="placeholder_desc"
            android:justificationMode="inter_word"
            android:layout_marginTop="6dp"
            />

        <Button
            android:id="@+id/button_visitlink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/more_information"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/a_desc"
            android:textColor="@color/white"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_visitlink"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/button_fav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_to_favorite"
                android:layout_margin="3dp"
                android:textColor="@color/white"
                android:layout_weight="1"
                />

            <Button
                android:id="@+id/button_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_text"
                android:layout_margin="3dp"
                android:textColor="@color/white"
                android:layout_weight="1"
                />

        </LinearLayout>

        </RelativeLayout>

</ScrollView>